<resources>
    <string name="app_name">Ghid Turistic Cluj</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="google_maps_api_key">AIzaSyAoORdblrrOSx2J6Wv1s1BXbc9Xd1jnVOg</string>

    <!--UI strings -->
    <string name="map_text">Map</string>
    <string name="list_text">List</string>
    <string name="register_new_string">Register new account</string>
    <string name="register_string">Register</string>
    <string name="login_string">Login</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="logout_string">Logout</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="empty_email_string">Enter email address!</string>
    <string name="empty_password_string">Enter password!</string>
    <string name="wrong_email_string">Enter a valid email, with the format example@domain.</string>
    <string name="wrong_password_string">Enter a valid password! Its length must be 6-20 characters!</string>
    <string name="different_password_string">Passwords do not match!</string>
    <string name="login_failed_string">Login Failed</string>
    <string name="objective_exists">Objective already exists!</string>
    <string name="ok_string">OK</string>
    <string name="cancel_string">Cancel</string>
    <string name="add_photo_string">Add picture</string>


    <!-- Message strings -->
</resources>
