<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.john.ghidturistic.Activities.LoginActivity">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:clickable="true"
        android:src="@drawable/ic_arrow_back_black_24dp" />


    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@mipmap/ic_launcher_cluj" />

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_icon"
        android:layout_margin="40dp"
        android:padding="20dp">

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_edit_text"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/password_repeat_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:visibility="gone"
            android:hint="@string/repeat_password_hint"
            android:layout_below="@id/password_edit_text"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_string"
                android:textSize="24sp"
                android:id="@+id/login_button"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:padding="15dp"
                android:clickable="true"
                style="@style/Widget.AppCompat.Button.Borderless"
                />

            <TextView
                android:id="@+id/register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_string"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/login_button"
                android:textSize="20sp"
                />


        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>
